--- a/_data/team.yml
+++ b/_data/team.yml
@@ -495,6 +495,8 @@
     - CIIPME-CONICET
     - R-Ladies Buenos Aires
     - MetaDocencia
+    social:
+      - {name: "twitter", link: "https://twitter.com/JesiFormoso"}
     
     
     
